galois 24/10, logica bloque 1

--- a/galois/galois.tex
+++ b/galois/galois.tex
@@ -189,6 +189,7 @@ numbered=no
 \newcommand{\quo}[2]{{\left.\raisebox{.2em}{$#1$}\middle/\raisebox{-.2em}{$#2$}\right.}}
 \newcommand{\appad}[1]{\mathrel{\mkern#1}}
 \newcommand{\setdef}[1]{\left\{#1\right\}}
+\newcommand{\sdf}[1]{\left\{#1\right\}}
 \newcommand{\car}[1]{\mathrm{car}(#1)}
 %\DeclareMathSymbol{\varprod}{\mathop}{largesymbolsA}{16}
 
