--- a/galois/input/2-extensiones.tex
+++ b/galois/input/2-extensiones.tex
@@ -139,7 +139,7 @@
     Se deja como ejercicio.
 \end{proof}
 
-\begin{thm}[Extensiones finitas y algebraicas]\label{thm:finitaalgebraica} %2.2
+\begin{thm}[Extensiones finitas y algebraicas]\label{thm:finitaalgebraica}\label{thm:2.2} %2.2
     Toda extensión finita es algebraica.
 \end{thm}
 \begin{proof}
@@ -231,7 +231,7 @@ En ocasiones querremos saber como extender un isomorfismo de cuerpos a una exten
     Como ejercicio.
 \end{proof}
 
-\begin{thm}[Extensión de un isomorfismo de cuerpos] % 2.5
+\begin{thm}[Extensión de un isomorfismo de cuerpos]\ref{thm:2.5} % 2.5
     Sean $E_1/K_1$, $E_2/K_2$ extensiones, $\sigma: K_1 \to K_2$ un isomorfismo de cuerpos, $p_1$ irreducible en $K_1$, $p_2$ irreducible en $K_2$, y $a_1$ y $a_2$ raíces de los polinomios respectivamente, entonces:
     $$
         \sigma \text{ se extiende a } \theta \iff \left.\theta\right|_{K_1} = \sigma
