Hasta teorma de deducción

--- a/logica-matematica/logica-matematica.tex
+++ b/logica-matematica/logica-matematica.tex
@@ -257,6 +257,9 @@ Revisión del \today $ $ a las \currenttime.
 \input{input/3-satisfaccion}
 \input{input/4-tautologias}
 \input{input/5-consecuencia-semantica}
+\part{Sistemas formales}
+\input{input/6-consecuencia-sintactica}
+\input{input/7-finitud-deduccion}
 \part{Ap\'{e}ndices}
 
 %\renewcommand{\chaptername}{Apéndice}
