--- a/galois/galois.tex
+++ b/galois/galois.tex
@@ -191,6 +191,11 @@ numbered=no
 \newcommand{\setdef}[1]{\left\{#1\right\}}
 \newcommand{\sdf}[1]{\left\{#1\right\}}
 \newcommand{\car}[1]{\mathrm{car}(#1)}
+\newcommand{\aut}{\mathrm{Aut}}
+\newcommand{\gal}{\mathrm{Gal}}
+\newcommand{\actar}{\curvearrowright}
+\newcommand{\vabs}[1]{\left|#1\right|}
+\newcommand{\rest}[1]{\left.#1\right|}
 %\DeclareMathSymbol{\varprod}{\mathop}{largesymbolsA}{16}
 
 \newcommand{\hr}{\rule{\textwidth}{.4pt}}
