--- a/galois/input/2-extensiones.tex
+++ b/galois/input/2-extensiones.tex
@@ -46,7 +46,7 @@
     \end{itemize}
 \end{proof}
 
-\begin{thm}[Transitividad de grados]\label{thm:transgr} % 2.1
+\begin{thm}[Transitividad de grados]\label{thm:transgr}\label{thm:2.1}% 2.1
     Sea una extensión $E/K$ y un subcuerpo $L$ intermedio $K \subseteq L \subseteq E$, entonces la extensión $E/K$ es finita si y sólo si $|E:L| < \infty,\ \land |L:K| < \infty$, y en tal caso: $|E:K| = |E:L|\cdot |L:K|$.
 \end{thm}
 
@@ -152,7 +152,7 @@
 
 \section{Teorema del elemento algebraico}
 
-\begin{thm}[Teorema del elemento algebraico]\label{thm:elemalg} %2.3
+\begin{thm}[Teorema del elemento algebraico]\label{thm:elemalg}\label{thm:2.3} %2.3
     Sea $E/K$ una extensión, $a \in E$ un elemento algebraico sobre $K$.
     \begin{enumerate}
         \item Existe un único polinomio irreducible mónico $p \in K[x]$ tal que $p(a) = 0$.
@@ -182,7 +182,7 @@
     ($\cdots$) (Es aún más tarde. \url{https://www.youtube.com/watch?v=I_6Gej1m4SU}) % TODO
 \end{eg}
 
-\begin{thm}[Extensión por varios elementos algebraicos]\label{thm:extalg} %2.4
+\begin{thm}[Extensión por varios elementos algebraicos]\label{thm:extalg}\label{thm:2.4} %2.4
     Sea $E/K$ una extensión, y sea $\mbf{a} = (a_1, \ldots, a_n)$ con $a_i \in E$ algebraicos sobre $K$, entonces $K(\mbf{a})/K$ es finita. En particular, $K(\mbf{a})/K$ es algebraica.
 \end{thm}
 
@@ -231,7 +231,7 @@ En ocasiones querremos saber como extender un isomorfismo de cuerpos a una exten
     Como ejercicio.
 \end{proof}
 
-\begin{thm}[Extensión de un isomorfismo de cuerpos]\ref{thm:2.5} % 2.5
+\begin{thm}[Extensión de un isomorfismo de cuerpos]\label{thm:2.5} % 2.5
     Sean $E_1/K_1$, $E_2/K_2$ extensiones, $\sigma: K_1 \to K_2$ un isomorfismo de cuerpos, $p_1$ irreducible en $K_1$, $p_2$ irreducible en $K_2$, y $a_1$ y $a_2$ raíces de los polinomios respectivamente, entonces:
     $$
         \sigma \text{ se extiende a } \theta \iff \left.\theta\right|_{K_1} = \sigma
