add some referencies

--- a/galois/input/2-extensiones.tex
+++ b/galois/input/2-extensiones.tex
@@ -243,7 +243,7 @@ En ocasiones querremos saber como extender un isomorfismo de cuerpos a una exten
     A completar.
 \end{proof}
 
-\begin{cor} % 2.6, 2.7
+\begin{cor}\label{cor:2.6}\label{cor:2.7} % 2.6, 2.7
     Sea $E/K$ una extensión, $p \in K[x]$ irreducible, entonces:\\
 
     $$a, b \in E \text{ son raíces de } p \iff \exists \text{ un isomorfismo } \theta: K(a) \to K(b) \text{ tal que } \theta(a) = b \text{ y } \theta(k) = k\ \forall k \in K$$
